--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
         <form method="post" id="f1">
             <p>
                 <label for="email">E-Mail ID: </label>
-                <input type="email" name="emailid" id="email" autocomplete="on" required autofocus>
+                <input type="email" name="email" id="email" autocomplete="on" required autofocus>
             </p>
             <p>
                 <label for="password">Password: </label>
