--- a/public/create_acc.html
+++ b/public/create_acc.html
@@ -53,9 +53,8 @@
     </main>
 
     <footer>
-        <p>Have an account already? <a href="login.html">Login here</a></p>
+        <p>Have an account already? <a href="/login">Login here</a></p>
     </footer>
-
 </body>
 
 </html>
