--- a/public/login.html
+++ b/public/login.html
@@ -40,9 +40,8 @@
     <hr>
 
     <footer>
-        <p>
-            Don't have an account? <a href="create_acc.html">Create one</a>
-        </p>
+        <p>Don't have an account? <a href="/create">Create one</a></p>
+        <input type="submit" id="createbutton" style="display:none" formaction="/create">
     </footer>
 
 </body>
