--- a/public/tenant_info.html
+++ b/public/tenant_info.html
@@ -21,7 +21,7 @@
         <form method="post" id="f1" action="/post-tenant-info">
             <p>
                 <label for="max_rent">What is the maximum rent you can afford (in Rs.)?: </label>
-                <input type="number" name="max_rent" id="max_rent" min="0" step="100" required autofocus>
+                <input type="number" name="max_rent" id="max_rent" min="0" step="100" value="0" autofocus>
             </p>
             <p>
                 <label for="max_no_of_roommates">What is the maximum number of roommates you can rent a house with? :</label>
