--- a/public/homeseeker_info.html
+++ b/public/homeseeker_info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="HOMESEEKER INFO!">
     <title>HOMESEEKER INFO!</title>
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/default.css" />
     <link rel="icon" href="images/icon.png" type="image/x-icon" />
 </head>
 
@@ -30,7 +30,7 @@
             <p>
                 <label for="preferred_house_type">Preferred house type:</label><br>
                 <input type="radio" name="preferred_house_type" value="FLAT" id="preferred_house_type">Flat<br>
-                <input type="radio" name="preferred_house_type" value="FLAT" id="preferred_house_type">Bungalow<br>
+                <input type="radio" name="preferred_house_type" value="BUNGALOW" id="preferred_house_type">Bungalow<br>
             </p>
             <p>
                 <label for="preferred_floor">Preferred floor if any:</label>
