--- a/public/buyer_info.html
+++ b/public/buyer_info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="PROVIDE INFO!!">
     <title>BUYER INFO!!</title>
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/default.css" />
     <link rel="icon" href="images/icon.png" type="image/x-icon" />
 </head>
 
