--- a/public/create_acc.html
+++ b/public/create_acc.html
@@ -7,54 +7,60 @@
     <title>CREATE ACCOUNT</title>
     <link rel="stylesheet" href="stylesheets/style.css" />
     <link rel="icon" href="images/icon.png" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/styleCreateAcc.css">
 </head>
 
 <body>
 
     <script src="javascripts/create_acc.js"></script>
 
-    <header>
-        <h1>Create a new account!</h1>
-    </header>
-
-    <hr>
-
-    <main>
+    <div class="container">
+    <div class="header">
+        <h1>Create Account!</h1>
+    </div>
+    <div class="main">
         <form method="post" id="f1">
-            <p>
-                <label for="email">Enter your email id:  </label>
-                <input type="email" name="email" id="email" required autocomplete="on" autofocus>
-            </p>
-            <p>
-                <label for="password">Set a password:</label>
-                <input type="password" name="password" id="password" required minlength="8" maxlength="20">
-                
-            </p>
-            <p>
-                <input type="checkbox" name="show-pwd" id="show-pwd" onclick="togglePasswordVisibility()">
-                <label>Show password</label>
-            </p>
-            <p>
+            <span>
+                <!--<label for="email">Enter your email id:  </label>-->
+                <input type="email" placeholder="E-mail id" name="email" id="email" required autocomplete="on" autofocus>
+            </span><br>
+            <span>
+                <!--<label for="password">Set a password:</label>-->
+                <input type="password" placeholder="Set password" name="password" id="password" required minlength="8" maxlength="20">
+            </span><br>    
+            
+            <!--<span>
                 Note: 
                 <ul>
                     <li>Your password must be atleast 8 characters long and no more than 20 characters long.</li>
                     <li>It must contain atleast one lowercase letter, one uppercase letter and one numeric digit.</li>
-                    <li>Spaces and tabs are not allowed.</li>
-                    <li>Only the following special characters are allowed: ! @ # $ % ^ & * / &lt; &gt; = , \ ' " ? . ; : _ - +</li>
                 </ul>
-            </p>
-            <p>
-                <label for="reconfirm">Reconfirm your password: </label>
-                <input type="password" name="reconfirm" id="reconfirm" required minlength="8" maxlength="20">
-            </p>
-            <input type="submit" value="Create account" id="submit-button" name="submit" onclick="validateAndSendInput()">
-            <input type="reset" id="reset-button" style="display:none">
+            </span><br>-->
+            <span>
+                <!--<label for="reconfirm">Reconfirm your password: </label>-->
+                <input type="password" placeholder="Reconfirm password"
+                 name="reconfirm" id="reconfirm" required minlength="8" maxlength="20">
+            </span><br>
+            <span id="checkbox123">
+                <input type="checkbox" name="make-pwd-visible" id="make-pwd-visible"
+                    onclick="togglePasswordVisibility()">
+                <label for="make-password-visible">Show password</label>
+            </span><br>
+            <div class="submit-button">
+            <button type="submit" value="Create account" id="submit-button" form="f1" name="submit" onclick="validateAndSendInput()">Submit</button>
+            <!-- <input type="submit" value="Create account" id="submit-button" name="submit" onclick="validateAndSendInput()"> -->
+            </div>
+            <div class="reset-button">
+                <button type="reset"  id="reset-button" name="Reset">Reset</button>
+            <!--<input type="reset" id="reset-button" name="Reset" >-->
+            </div>
         </form>
-    </main>
+    </div>
 
-    <footer>
-        <p>Have an account already? <a href="/login">Login here</a></p>
-    </footer>
+        <div class="footer">
+            <p>Have an account already? <a href="/login">Login here</a></p>
+        </div>
+    </div>
 </body>
 
 </html>
