--- a/public/owner_info.html
+++ b/public/owner_info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="HOMEOWNER INFO!">
     <title>HOMEOWNER INFO!</title>
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/default.css" />
     <link rel="icon" href="images/icon.png" type="image/x-icon" />
     <script src="javascripts/owner_info.js"></script>
 </head>
